--- a/functions/package.json
+++ b/functions/package.json
@@ -1,27 +1,31 @@
 {
-  "name": "functions",
-  "description": "Cloud Functions for Firebase",
-  "scripts": {
-    "lint": "eslint .",
-    "serve": "firebase emulators:start --only functions",
-    "shell": "firebase functions:shell",
-    "start": "npm run shell",
-    "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
-  },
-  "engines": {
-    "node": "18"
-  },
-  "main": "index.js",
-  "dependencies": {
-    "@sendgrid/mail": "^8.1.0",
-    "firebase-admin": "^11.8.0",
-    "firebase-functions": "^4.3.1"
-  },
-  "devDependencies": {
-    "eslint": "^8.15.0",
-    "eslint-config-google": "^0.14.0",
-    "firebase-functions-test": "^3.1.0"
-  },
-  "private": true
+	"name": "functions",
+	"description": "Cloud Functions for Firebase",
+	"scripts": {
+		"lint": "eslint .",
+		"lint:fix": "eslint . --fix ",
+		"serve": "firebase emulators:start --only functions",
+		"shell": "firebase functions:shell",
+		"start": "npm run shell",
+		"deploy": "firebase deploy --only functions",
+		"logs": "firebase functions:log",
+		"test": "mocha --reporter spec"
+	},
+	"engines": {
+		"node": "18"
+	},
+	"main": "index.js",
+	"dependencies": {
+		"@sendgrid/mail": "^8.1.0",
+		"firebase-admin": "^11.8.0",
+		"firebase-functions": "^4.3.1"
+	},
+	"devDependencies": {
+		"chai": "^4.2.0",
+		"eslint": "^8.15.0",
+		"eslint-config-google": "^0.14.0",
+		"firebase-functions-test": "^3.1.1",
+		"mocha": "^10.3.0"
+	},
+	"private": true
 }
